--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,19 +1,41 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Consulta de Usuario</title>
+    <title>Sistema de Compras</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Consulta de Usuario</h1>
-        <form id="consultaForm">
-            <input type="text" id="cedula" placeholder="Ingrese su cédula" required>
-            <button type="submit">Consultar</button>
-            <div id="resultado"></div>
-            <button id="btnLimpiar" class="btn-limpiar">Limpiar y Liberar</button>
-        </form>
+    <div class="main-container">
+        <!-- Sección de Productos -->
+        <div class="products-section">
+            <h2>Productos Disponibles</h2>
+            <div class="products-grid" id="productsContainer"></div>
+        </div>
+        
+        <!-- Panel Derecho -->
+        <div class="right-panel">
+            <!-- Sección de Búsqueda -->
+            <div class="search-section">
+                <h2>Identificación de Usuario</h2>
+                <form id="consultaForm">
+                    <input type="text" id="cedula" placeholder="Ingrese su cédula" required>
+                    <button type="submit">Validar Usuario</button>
+                    <div id="resultado"></div>
+                </form>
+            </div>
+            
+            <!-- Sección del Carrito -->
+            <div class="cart-section">
+                <h2>Carrito de Compras</h2>
+                <div id="cartItems"></div>
+                <div class="cart-total">
+                    <p>Total: $<span id="totalAmount">0</span></p>
+                    <button id="checkoutBtn" disabled>Realizar Pago</button>
+                    <button id="btnLimpiar" class="btn-limpiar">Limpiar Todo</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="/js/app.js"></script>
 </body>
